tests/baselines/reference/inferTypePredicateImplicit.errors.txt
inferTypePredicateImplicit.ts(2,9): error TS2448: Block-scoped variable 'ok' used before its declaration.


==== inferTypePredicateImplicit.ts (1 errors) ====
    function isNonNull(x: number | null) {
      const ok = x !== null;
            ~~
!!! error TS2448: Block-scoped variable 'ok' used before its declaration.
!!! related TS2728 inferTypePredicateImplicit.ts:2:9: 'ok' is declared here.
      return ok;
    }
    
    declare let tNN: number | null;
    if (isNonNull(tNN)) {
      let t: number = tNN;
    }
    
    // Should not infer a type predicate for this function.
    // true return => x is string, but false return !=> x is number
    function flakyIsString(x: string | number) {
      return typeof x === 'string' && Math.random() > 0.5;
    }
    